--- a/index.html
+++ b/index.html
@@ -5,14 +5,14 @@
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-
+    <link href="css/style.css" rel="stylesheet">
     <!-- Bootstrap CSS -->
 
 
     <!-- My Style -->
 
 
-    <title>Career Website</title>
+    <title>Finance and accounting</title>
 </head>
 
 <body>
